# lazydns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.yaml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  fuzz.yaml  release.yml
benches/: arc_str_bench.rs  forward_clone.rs  forward_concurrent.rs
doc/: implementation.md
docker/: Dockerfile  Dockerfile.local  Dockerfile.local.scratch  docker-compose.yml
docs/: ADMIN_USAGE.md  AUDIT_USAGE_GUIDE.md  BENCHMARK_CONCURRENT_CLIENTS.md  BREAKING_CHANGE_REQUESTCONTEXT.md  BUG_FIXES.md  CACHE_CLEANUP.md  CACHE_CONFIG_GUIDE.md  DOMAIN_MATCHING_RULES.md  ENV_OVERRIDE.md  IMPLEMENTATION.md  IP_MATCHING_RULES.md  MEMORY_METRICS.md  PLUGINS_AUDIT_PLUGINS.md  PLUGIN_DOWNLOADER.md  README.MD  README.md  REFRESH_COORDINATOR.md  SHUTDOWN.md  UPSTREAM_FEATURES.md  implementation.md
docs/en/: 01_INTRODUCTION.MD  01_INTRODUCTION.md  02_QUICKSTART.MD  02_QUICKSTART.md  03_INSTALLATION.md  04_01_01_LISTENER_UDP_TCP.md  04_01_02_LISTENER_DOT.md  04_01_03_LISTENER_DOH.md  04_01_04_LISTENER_DOQ.md  04_01_SERVER_SETTINGS.md  04_02_LOGGING.md  04_03_AUDIT_LOGGING.md  04_CONFIGURATION.md  05_00_PLUGIN_SEQUENCE.md  05_01_PLUGIN_HOSTS.md  05_02_PLUGIN_FORWARD.md  05_03_PLUGIN_CACHE.MD  05_04_PLUGIN_ACL.md  05_05_PLUGIN_GEOIP_GEOSITE.md  05_06_PLUGIN_CRON.md  05_07_01_PLUGIN_DOMAIN_SET.md  05_07_02_PLUGIN_IP_SET.md  05_08_01_PLUGIN_ARBITRARY.md  05_08_02_PLUGIN_BLACK_HOLE.md  05_08_03_PLUGIN_COLLECTOR.md  05_08_04_PLUGIN_DEBUG_PRINT.md  05_08_05_PLUGIN_DOWNLOADER.md  05_08_06_PLUGIN_DROP_RESP.md  05_08_07_PLUGIN_DUAL_SELECTOR.md  05_08_08_PLUGIN_ECS.md  05_08_09_PLUGIN_EDNS0OPT.md  05_08_10_PLUGIN_FALLBACK.md  05_08_11_PLUGIN_IPSET_EXEC.md  05_08_12_PLUGIN_MARK.md  05_08_13_PLUGIN_NFTSET.md  05_08_14_PLUGIN_QUERY_SUMMARY.md  05_08_15_PLUGIN_RATE_LIMIT.md  05_08_16_PLUGIN_REDIRECT.md  05_08_17_PLUGIN_REVERSE_LOOKUP.md  05_08_18_PLUGIN_ROS_ADDRLIST.md  (+30 more)
docs/man/: lazydns.1.md  lazydns.5.md  lazydns.8.md
etc/grafana/: lazydns_metrics_dashboard.json
etc/lazydns/: config.yaml
etc/prometheus/alerts/: memory.yml
etc/systemd/: lazydns.service
examples/: README.rate_limit_testing.md  acl.demo.yaml  arbitrary-demo.yaml  config.example.yaml  control-flow.demo.yaml  debug_print.demo.yaml  domain_validator.demo.yaml  dual_selector.demo.yaml  ecs.demo.yaml  edns0opt.demo.md  ipset.demo.yaml  mark.demo.yaml  nftset.demo.yaml  query_summary.demo.yaml  ratelimit.demo.yaml  reverse_lookup.demo.yaml  test_server.rs
examples/audit/: README.md  audit.demo.py  audit.demo.yaml
examples/collector/: README_metrics.md  metrics_collector.demo.yaml  metrics_collector_demo.rs  prometheus_metrics_collector.demo.yaml  prometheus_metrics_collector_demo.rs
examples/dns-sd/: dns-sd-rules.txt  dns-sd.demo.yaml
examples/etc/: README.md  config-cn.yaml  config-cron-downloader-test.yaml  config-cron-downloader.yaml  config-cron.yaml  config-simple.yaml  config.yaml  hosts-github.txt  my-domain-list.txt  proxy-ext-list.txt  update
examples/etc/certs/: cert.pem  key.pem
examples/geo/: geoip.demo.yaml  geoip.txt  geosite.demo.yaml  geosite.txt
examples/metrics/: README.memory_metrics.md  README.metrics.md  memory_metrics.demo.yaml  metrics_collector.demo.yaml  prometheus_metrics_collector.demo.yaml
fuzz/: Cargo.toml  README.md  run_all.sh
fuzz/fuzz_targets/: config_parser.rs  dns_parser.rs  domain_validator.rs
lazydns-macros/: Cargo.toml  README.md
lazydns-macros/src/: lib.rs
scripts/: cross_build.sh  generate_certs.sh  generate_plugins_audit_plugins.py
src/: cli.rs  lib.rs  logging.rs  main.rs  metrics.rs  test_helpers.rs  utils.rs
src/config/: loader.rs  mod.rs  reload.rs  server.rs  types.rs  validation.rs
src/dns/: message.rs  mod.rs  question.rs  rdata.rs  record.rs  types.rs  wire.rs
src/log/: mod.rs  rotation.rs  writer.rs
src/metrics/: mod.rs
src/metrics/memory/: cgroup_reader.rs  mod.rs  proc_reader.rs
src/plugin/: builder.rs  context.rs  executor.rs  factory.rs  mod.rs  registry.rs  traits.rs
src/plugin/condition/: builder.rs  has_cname.rs  has_resp.rs  mod.rs  qclass.rs  qname.rs  qname_neg.rs  qtype.rs  rcode.rs  resp_ip.rs  resp_ip_neg.rs
src/plugins/: acl.rs  advanced.rs  cache.rs  control_flow.rs  cron.rs  data_provider.rs  domain_matcher.rs  domain_validator.rs  forward.rs  geoip.rs  geosite.rs  hosts.rs  ip_matcher.rs  lazy_refresh.rs  mark.rs  mod.rs  ratelimit.rs  server.rs  utils.rs
src/plugins/audit/: config.rs  event.rs  event_bus.rs  logger.rs  mod.rs  plugin.rs
src/plugins/dataset/: arbitrary.rs  domain_set.rs  hosts.rs  ip_set.rs  mod.rs
src/plugins/executable/: arbitrary.rs  black_hole.rs  cache.rs  collector.rs  debug_print.rs  downloader.rs  drop_resp.rs  dual_selector.rs  ecs.rs  ecs_handler.rs  edns0opt.rs  fallback.rs  forward.rs  forward_edns0opt.rs  hosts.rs  ipset.rs  mark.rs  mod.rs  nftset.rs  query_summary.rs  ratelimit.rs  redirect.rs  reverse_lookup.rs  ros_addrlist.rs  sequence.rs  sleep.rs  ttl.rs
src/plugins/flow/: accept.rs  goto.rs  if_plugin.rs  jump.rs  mod.rs  parallel.rs  prefer_ipv4.rs  prefer_ipv6.rs  reject.rs  return_plugin.rs
src/plugins/matcher/: base_int.rs  client_ip.rs  cname.rs  env.rs  has_resp.rs  has_wanted_ans.rs  mod.rs  ptr_ip.rs  qclass.rs  qname.rs  qtype.rs  random.rs  rcode.rs  (+1 more)
src/server/: admin.rs  common.rs  config.rs  doh.rs  doq.rs  dot.rs  handler.rs  launcher.rs  mod.rs  monitoring.rs  tcp.rs  tls.rs  udp.rs
src/utils/: mod.rs
src/web/: config.rs  embedded.rs  mod.rs  state.rs  upstream_registry.rs
tests/: admin_server_test.rs  integration_cache.rs  integration_doq.rs  integration_ipset_nftset.rs  integration_ratelimit.rs  integration_save_hook.rs  integration_smoke.rs  integration_test.rs  integration_tls_doh_dot.rs  logging_file_tests.rs  plugin_builder_test.rs  server_test.rs  web_api_test.rs
webui/: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test-theme.html  tsconfig.json  vite.config.ts
webui/src/: App.svelte  app.css
(+51 files in other folders)
