[package]
name = "lazydns"
version = "0.1.27"
edition = "2021"
authors = ["lazydns contributors"]
description = "A DNS server implementation in Rust, inspired by mosdns"
repository = "https://github.com/lazywalker/lazydns"
license = "GPL3.0"
readme = "README.md"
keywords = ["dns", "server", "mosdns", "doh", "dot"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.35", default-features = false, features = [
    "rt",
    "signal",
    "macros",
] }

# DNS protocol
hickory-proto = "0.24"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "json",
    "ansi",
] }
tracing-appender = "0.2"
time = { version = "0.3", default-features = false, features = [
    "formatting",
    "parsing",
    "local-offset",
] }

# Async utilities
async-trait = "0.1"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Networking
axum = { version = "0.7", default-features = false, features = [
    "json",
    "query",
    "tokio",
    "macros",
    "http2",
], optional = true }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# QUIC / DoQ support (optional)
quinn = { version = "0.11", optional = true }

# Base64 encoding
base64 = "0.21"

# Metrics
prometheus = { version = "0.13", optional = true }

# File watching for hot reload
notify = "6.1"

# CLI
pico-args = "0.5"

# Utilities
once_cell = "1.19"
paste = "1.0"
regex = "1.10"
ipnet = "2.9"
rand = "0.8"

# Optional TLS-enabled HTTP server for DoH production deployments.
axum-server = { version = "0.7", optional = true, package = "axum-server", default-features = false, features = [
    "tls-rustls-no-provider",
] }

[dev-dependencies]
tempfile = "3.8"
rcgen = "0.9"

[features]
default = []
tls = ["dep:rustls"]
dot = ["tls", "rustls-pemfile", "tokio-rustls"]
# Enable TLS-backed (DoH using axum-server + rustls) server implementation
doh = ["tls", "rustls-pemfile", "axum-server", "axum"]
# Enable DoQ (QUIC) server implementation
doq = ["tls", "rustls-pemfile", "quinn"]
admin = ["axum", "prometheus"]

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
split-debuginfo = "off"
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[profile.minimal]
inherits = "release"
panic = "abort"
opt-level = "z"

[[bin]]
name = "lazydns"
path = "src/main.rs"

[lib]
name = "lazydns"
path = "src/lib.rs"
