[package]
name = "lazydns-fuzz"
version = "0.2.60"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.lazydns]
path = ".."

[[bin]]
name = "domain_validator"
path = "fuzz_targets/domain_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dns_parser"
path = "fuzz_targets/dns_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
test = false
doc = false
bench = false
